# engram

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RESEARCH.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  docker.yml  promote.yml
config/prompts/: commitment_extraction.jinja2  conversation_summary.jinja2  entity_extraction.jinja2  fact_extraction.jinja2  relationship_inference.jinja2
docs/: deployment-promotion.md  onboarding.md
docs/plans/: 2026-02-16-engram-mvp.md  2026-02-26-open-source-hardening.md  2026-03-21-temporal-relationships-learnings.md  2026-04-01-branch-forecasting-v0.md
docs/research/: Research Lab Memo Engram.md  Research March 31 2026.md  Research Thesis Engram.md
examples/: coaching-demo.json
scripts/: demo.sh
scripts/data_collection/: build_track_b_events.py  fetch_dbrs.py  fetch_edgar_cmbs.py  fetch_fannie.py  fetch_ginnie.py  ingest_track_b_events.py  run_h1_schema_induction.py  run_h2_context_ablation.py  run_h3_comparison.py  run_h4_symbolic_ablation.py  run_h5_transfer.py  run_research_pipeline.py  run_thin_slice_experiment.py  run_track_b_backtest.py
src/engram/: __init__.py  config.py  main.py
tests/e2e/: test_coaching_demo.py
tests/integration/: conftest.py  test_api.py  test_neo4j_store.py  test_vector.py
tests/unit/: test_cli.py  test_config.py  test_dedup.py  test_extraction.py  test_fetch_edgar_cmbs.py  test_h1_schema.py  test_h2_context.py  test_models.py  (+22 more)
(+57 files in other folders)
